--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,15 +38,20 @@ body {
 
 #phaser-game {
     width: 100%;
-    height: 80%;
-    background-color: #333; /* Placeholder background */
+    height: 70%;
+    display: block;
+    image-rendering: pixelated;
+    background-color: #333; 
 }
 
+/*Heads-up-display*/
 #hud {
     position: absolute;
     top: 10px;
     left: 10px;
     font-size: 14px;
+    display: flex;
+    align-items: center;
 }
 
 #main-menu {
@@ -101,7 +106,7 @@ body {
     transform: scale(1.1);
     filter: drop-shadow(2px 2px 2px #000);
 }
-
+/*Instruction modal*/
 .modal {
     display: none;
     position: fixed;
@@ -184,15 +189,6 @@ body {
 
 #phaser-game {
     animation: pixelate 0.5s ease-in;
-}
-
-#hud {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
 }
 
 #health-bar-container {
