Fixed viewport height and add separate js file for modals

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,10 @@ body, html {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 80%;
     font-family: 'Press Start 2P', cursive;
     background-color: #000; /* Black background */
-    color: #fff; /* White text */
+    color: #fff; 
     image-rendering: pixelated; /* Ensures that images remain pixelated */
 }
 
@@ -38,7 +38,7 @@ body {
 
 #phaser-game {
     width: 100%;
-    height: 80%;
+    height: 70%;
     display: block;
     image-rendering: pixelated;
     background-color: #333; 
@@ -75,7 +75,7 @@ body {
     transition: background-color 0.3s, transform 0.1s;
     animation: pulse 1.5s infinite;
     background-color: #42ae42; /* Green background for the Start button */
-    color: #000; /* Black text for contrast */
+    color: #000; 
     box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700;
     font-family: 'Press Start 2P', cursive;
 }
@@ -98,7 +98,7 @@ body {
 
 #start-button:hover {
     background-color: #FFD700; /* Gold background on hover */
-    color: #000; /* Black text */
+    color: #000;
     border-color: #00FF00; /* Green border on hover */
     box-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00;
 }
@@ -135,6 +135,7 @@ body {
     transform: scale(1.1);
     filter: drop-shadow(2px 2px 2px #000);
 }
+
 /*Instruction modal*/
 .modal {
     display: none;
@@ -165,7 +166,7 @@ body {
 
 .modal-content h2 {
     font-size: 24px;
-    color: #FFD700; /* Gold color for headings */
+    color: #FFD700; 
     text-shadow: 2px 2px #000; /* Shadow effect for 3D look */
     margin-bottom: 20px;
 }
@@ -190,6 +191,18 @@ body {
     cursor: pointer;
 }
 
+/* High Scores Modal */
+#highScoresModal .modal-content {
+    background-color: #222;
+    margin: 5% auto;
+    padding: 20px;
+    border: 4px solid #888;
+    width: 70%;
+    color: #00FF00;
+    font-family: 'Press Start 2P', cursive;
+    box-shadow: 0 0 10px #00FF00, 0 0 20px #00FF00, 0 0 30px #00FF00;
+    text-align: center;
+}
 
 
 #game-over {
