--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body, html {
     height: 80%;
     font-family: 'Press Start 2P', cursive;
     color: #fff; 
-    image-rendering: pixelated; /* Ensures that images remain pixelated */
+    image-rendering: pixelated; /* Ensures that images remain pixelated */;
     background-image: url('/assets/images/preview2_6.png'); 
     background-size: cover; 
     background-position: center; 
@@ -24,20 +24,18 @@ body {
     width: 80%;
     max-width: 800px;
     height: 80vh;
-    margin: 50px auto;
-    border: 4px solid #15bb15;
-    box-shadow: 0 0 20px #00FF00;
+    margin: 140px auto;
+    border: 4px solid #00CC00;
+    box-shadow: 0 0 20px #00CC00;
     background: url('/assets/images/pixel-art-old-video-game-console-landscape-background-retro-style-8-bit-game-ai_985124-2227.avif'); /* Add a pixel grid background */
     background-size: cover;
     border-radius: 8px;
-}
-
-#game-container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+
 
 #phaser-game {
     width: 100%;
@@ -90,7 +88,7 @@ body {
     }
     50% {
         transform: scale(1.1);
-        box-shadow: 0 0 20px rgb(189, 206, 63);
+        box-shadow: 0 0 20px rgb(255, 0, 0);
     }
 }
     
@@ -259,8 +257,8 @@ body {
     background-color: #333;
     border: 2px solid #fff;
     padding: 2px;
-    margin-right: 20px;
-    image-rendering: pixelated; /* Ensures that images remain pixelated */
+    margin-right: 100px;
+    margin-left: 120px
 }
 
 #health-bar {
@@ -284,7 +282,7 @@ body {
     
 #speaker-button {
     position: absolute;
-    top: 10px;
+    top: 70px;
     right: 10px;
     border: none;
     cursor: pointer;
@@ -295,4 +293,44 @@ body {
     width: 32px; /* Adjust the size as needed */
     height: 32px;
 }
+
+/* New CSS for the logo */
+#logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 100px; 
+    height: 50px;
+    z-index: 15; 
+}
+
+/* Battle City Title */
+#battle-city-title {
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 48px; 
+    color: #00FF00; 
+    text-shadow: 2px 2px 0 #000, /* Adds a shadow for 3D effect */
+                 4px 4px 0 #00FF00, 
+                 6px 6px 0 #000;
+    font-family: 'Press Start 2P', cursive; 
+    letter-spacing: 2px; 
+    text-transform: uppercase;
+    z-index: 10; 
+    image-rendering: pixelated; 
+    background: repeating-linear-gradient(
+        45deg,
+        #00FF00, /* Bright green stripes */
+        #00FF00 10px,
+        #007700 10px,
+        #007700 20px
+    );
+    padding: 10px;
+    border: 4px solid #000; 
+    border-radius: 8px;
+    box-shadow: 0 0 10px #00FF00, 0 0 20px #00FF00; /* Glow effect */
+}
+
 
