--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,8 @@ body {
     max-width: 800px;
     height: 80vh;
     margin: 140px auto;
-    border: 4px solid #00CC00;
-    box-shadow: 0 0 20px #00CC00;
+    border: 4px solid #23ff01;
+    box-shadow: 0 0 20px #ffff00;
     background: url('/assets/images/pixel-art-old-video-game-console-landscape-background-retro-style-8-bit-game-ai_985124-2227.avif'); /* Add a pixel grid background */
     background-size: cover;
     border-radius: 8px;
