--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
     max-width: 800px;
     height: 80vh;
     margin: 140px auto;
-    border: 4px solid #23ff01;
+    border: 4px solid #00CC00;
     box-shadow: 0 0 20px #ffff00;
     background: url('/assets/images/pixel-art-old-video-game-console-landscape-background-retro-style-8-bit-game-ai_985124-2227.avif'); /* Add a pixel grid background */
     background-size: cover;
@@ -35,6 +35,7 @@ body {
     justify-content: center;
     flex-direction: column;
 }
+
 
 
 #phaser-game {
@@ -61,25 +62,34 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    z-index: 10;
 }
+
 
 #main-menu h1 {
     font-size: 32px;
     margin-bottom: 20px;
 }
 
-#start-button {
+#main-menu button {
     padding: 10px 20px;
     font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s, transform 0.1s;
-    animation: pulse 1.5s infinite;
-    background-color: #42ae42; /* Green background for the Start button */
+   
+    background-color: #42ae42; 
     color: #000; 
-    box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700;
+    box-shadow: 0 0 10px #FFD700, 0 0 10px #FFD700, 0 0 10px #FFD700;
     font-family: 'Press Start 2P', cursive;
+    margin-bottom: 10px;
+    display: block;
+    width: 100%;
 }
+#start-button {
+    animation: pulse 1.5s infinite;
+}
+
 
 @keyframes pulse {
     0%, 100% {
@@ -99,11 +109,12 @@ body {
 
 #start-button:hover {
     background-color: #FFD700; /* Gold background on hover */
-    color: #000;
+    color: #ffffff;
     border-color: #00FF00; /* Green border on hover */
     box-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00;
 }
 
+/* High Scores and Instructions Button Styles */
 #high-scores-button, 
 #instructions-button {
     background-color: #444;
@@ -114,25 +125,16 @@ body {
     font-family: 'Press Start 2P', cursive;
     cursor: pointer;
     margin-top: 20px;
-    text-transform: uppercase;
+    transform: scale(1); /* Reset scale to default */
+    filter: drop-shadow(2px 2px 2px #000);
 }
 
- 
-#high-scores-button:hover {
-    background-color: #888;
-    color: #000;
-    border-color: #000;
-    box-shadow: 0 0 5px #FFD700, 0 0 10px #FFD700;
-}
+#high-scores-button:hover, 
 #instructions-button:hover {
     background-color: #888;
-    color: #000;
-    border-color: #000; 
+    color: #ffffff;
+    border-color: #000;
     box-shadow: 0 0 5px #FFD700, 0 0 10px #FFD700;
-}
-
-#instructions-button,
-#high-scores-button:hover {
     transform: scale(1.1);
     filter: drop-shadow(2px 2px 2px #000);
 }
@@ -259,7 +261,7 @@ body {
     border: 2px solid #fff;
     padding: 2px;
     margin-right: 100px;
-    margin-left: 120px
+    margin-left: 10px
 }
 
 #health-bar {
@@ -283,7 +285,7 @@ body {
     
 #speaker-button {
     position: absolute;
-    top: 70px;
+    top: 10px;
     right: 10px;
     border: none;
     cursor: pointer;
@@ -312,7 +314,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     font-size: 48px; 
-    color: #00FF00; 
+    color: #000; 
     text-shadow: 2px 2px 0 #000, /* Adds a shadow for 3D effect */
                  4px 4px 0 #00FF00, 
                  6px 6px 0 #000;
